--- a/openbsd/sysutils/sysmon/pkg/sysmond.rc
+++ b/openbsd/sysutils/sysmon/pkg/sysmond.rc
@@ -3,6 +3,7 @@
 # $OpenBSD: sshd,v 1.3 2015/07/15 13:50:54 ajacoutot Exp $
 
 daemon="${TRUEPREFIX}/bin/sysmond"
+daemon_flags="-f ${SYSCONFDIR}/sysmon.conf"
 daemon_timeout="60"
 
 . /etc/rc.d/rc.subr
