cleaned up a little. tgz file created.

--- a/openbsd/sysutils/sysmon/Makefile
+++ b/openbsd/sysutils/sysmon/Makefile
@@ -1,38 +1,35 @@
 # $OpenBSD: Makefile.template,v 1.72 2015/04/08 17:53:19 sthen Exp $
 
-COMMENT =		lightweight network monitoring tool
-DISTNAME =		sysmon-0.93
+COMMENT =	lightweight network monitoring tool
+DISTNAME =	sysmon-0.93
+CATEGORIES =	sysutils
 
-CATEGORIES =		sysutils
+HOMEPAGE =	http://puck.nether.net/sysmon/
+MAINTAINER =	George Rosamond <george@nycbug.org>
 
-HOMEPAGE =		http://puck.nether.net/sysmon/
-
-MAINTAINER =		George Rosamond <george@nycbug.org>
-
-#GPLv2
+# GPLv2
 PERMIT_PACKAGE_CDROM =	Yes
 
-MASTER_SITES =		ftp://puck.nether.net/pub/jared/ \
-			http://mirrors.nycbug.org/pub/distfiles/
+WANTLIB +=	c crypto curses ncurses pthread ssl
 
-WANTLIB =		c crypto curses ncurses pthread ssl
+MASTER_SITES =	ftp://puck.nether.net/pub/jared/ \
+		http://mirrors.nycbug.org/pub/distfiles/
 
-USE_GMAKE =		Yes
+
 CONFIGURE_STYLE =	gnu
 CONFIGURE_ARGS =	--enable-ipv6
-AUTOCONF_VERSION =	2.68
 
-NO_TEST =		Yes
+USE_GMAKE =	Yes
 
-DOCDIR =		${PREFIX}/share/doc/sysmon/
-DOCS =			{README,*.html,*.jpg,*.png,*.txt}
-EXAMPLEDIR =		${PREFIX}/share/examples/sysmon/
-MANDIR =		${PREFIX}/man
+NO_TEST =	Yes
+
+DOCDIR =	${PREFIX}/share/doc/sysmon/
+DOCS =		{README,*.html,*.jpg,*.png,*.txt}
+EXAMPLEDIR =	${PREFIX}/share/examples/sysmon/
+MANDIR =	${PREFIX}/man
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/src/{sysmon,sysmond} ${PREFIX}/bin
-
-post-install:
 	${INSTALL_DATA_DIR} ${DOCDIR} ${EXAMPLEDIR}
 	${INSTALL_DATA} ${WRKDIST}/docs/${DOCS} ${DOCDIR}
 	${INSTALL_DATA} ${WRKDIST}/LICENSE ${DOCDIR}
